--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <form>
       <p>We want to get to know you! Please enter your personal information.</p>
       <fieldset>
-        <legend>Personal Information</legend>
+        <legend aria-label="Personal Information">Personal Information</legend>
         <!-- "for" and "id" are needed, so the field turns blue, if you click the label. -->
         <label name="first-name" for="first-name">First Name:</label>
         <input name="first-name" id="first-name" />
@@ -25,7 +25,7 @@
       </fieldset>
       <p>Can you tell us a little bit more?</p>
       <fieldset>
-        <legend>Further information</legend>
+        <legend aria-label="Further Information">Further information</legend>
         <label name="fav-color" for="fav-color">Your favourite Color:</label>
         <input name="fav-color" id="fav-color" type="color" />
         <label name="fav-pet" for="fav-pet">Your favourite Pet:</label>
