--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
           <option value="cat">Cat</option>
         </select>
       </fieldset>
-      <button>Submit</button>
+      <button title="click to Submit">Submit</button>
     </form>
   </body>
 </html>
+
+<!-- in java script am besten alles in camelCase -->
